--- a/primaryrace/DESCRIPTION
+++ b/primaryrace/DESCRIPTION
@@ -1,8 +1,12 @@
 Package: primaryrace
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-Depends: R (>= 3.2.3)
+Title: Calculating a Presidential Candidate's Delegate Count
+Version: 0.1
+Authors@R: Jacob Metz, <jacob.metz@wustl.edu>
+Description: This package takes a presidential candidate's delegate count and calculates how many delegates
+the candidate still needs to win in order to win the party's nomination. This delegate count will depend on 
+the candidate's party, either Democratic or Republican.
+Depends:
+    R (>= 3.2.3)
 License: What license is it under?
 LazyData: true
+RoxygenNote: 5.0.1
