--- a/primaryrace/DESCRIPTION
+++ b/primaryrace/DESCRIPTION
@@ -2,9 +2,7 @@ Package: primaryrace
 Title: Calculating a Presidential Candidate's Delegate Count
 Version: 0.1
 Authors@R: Jacob Metz, <jacob.metz@wustl.edu>
-Description: This package takes a presidential candidate's delegate count and calculates how many delegates
-the candidate still needs to win in order to win the party's nomination. This delegate count will depend on 
-the candidate's party, either Democratic or Republican.
+Description: This package takes a presidential candidate's delegate count and calculates how many delegates the candidate still needs to win in order to win the party's nomination. This delegate count will depend on the candidate's party, either Democratic or Republican.
 Depends:
     R (>= 3.2.3)
 License: What license is it under?
